src/test/ui/reserved/reserved-attr-on-macro.stderr
error: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/reserved-attr-on-macro.rs:1:3
   |
LL | #[rustc_attribute_should_be_reserved]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot determine resolution for the macro `foo`
  --> $DIR/reserved-attr-on-macro.rs:10:5
   |
LL |     foo!();
   |     ^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `rustc_attribute_should_be_reserved` in this scope
  --> $DIR/reserved-attr-on-macro.rs:1:3
   |
LL | #[rustc_attribute_should_be_reserved]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

